# curveHierachy

./: CMakeLists.txt  main.cpp
curvestaticlib/: CMakeLists.txt
curvestaticlib/include/: circle.h  curve.h  ellipse.h  helixe.h
curvestaticlib/source/: circle.cpp  curve.cpp  ellipse.cpp  helixe.cpp
